@@ -31,6 +31,7 @@ Revision history for Rex
  - Test custom template functions
  - Add initial config file tests
  - Test custom server functions
+ - Add test for OS-specific dependencies
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
